<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="5px">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/bar0"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:id="@+id/bar1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/tour_address"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/tour_time"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/tour_admission"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/tour_parking"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="@string/tour_holiday"
                android:textColor="@android:color/holo_blue_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_admission"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_parking"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tv_holiday"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:paddingLeft="7dp"
                android:text="TextView" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/tour_comment"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/bar3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.kwakgee.seoultest.MapsActivity" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableBottom="@android:drawable/ic_menu_info_details" />

        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableBottom="@android:drawable/ic_menu_call" />

        <Button
            android:id="@+id/btn_homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tour_homepage" />
    </LinearLayout>

</LinearLayout>
</ScrollView>