<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        card_view:cardCornerRadius="8dp">

        <RelativeLayout
            android:id="@+id/rel_layout"
            android:layout_width="match_parent"
            android:layout_height="264dp">

            <ImageView
                android:id="@+id/cover_bg_details"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/blank"
                android:transitionName="player" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.3"
                android:background="#000000" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cover_bg_details"
                android:layout_toEndOf="@+id/img_sex"
                android:layout_toRightOf="@+id/img_sex"
                android:text="선 수 명"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txt_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/img_sex"
                android:layout_toRightOf="@+id/img_sex"
                android:paddingRight="10dp"
                android:text="출전종목"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_game"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/img_sex"
                android:layout_toRightOf="@+id/img_sex"
                android:text="생년월일"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_sex"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="157dp"
                android:layerType="hardware"
                android:scaleType="fitXY"
                android:src="@drawable/couple" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cheer_title"
            android:textSize="24sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reply"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cheer_edit"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/cheer_send" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>